# Neural-Network

./: LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg  xor.py
neural_network/: network.py
neural_network/activation/: ReLu.py  Softmax.py  Tanh.py  __init__.py  activation.py
neural_network/layers/: dense.py  layer.py
neural_network/loss/: loss_function.py  mse.py
neural_network/utils/: nparray.py
test/: test_dense_layer.py  test_relu_activation.py
