[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "neural-network"
version = "0.2.0"
description = "a simple neural network library in python and numpy"
requires-python = ">=3.8"
dependencies = [ "numpy",]

[[project.authors]]
name = "Jonas Lütolf"

[project.license]
text = "MIT"

[tool.setuptools]
zip-safe = false
license-files = [ "LICENSE",]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
